update index files

--- a/packages/create-monorepo-app/templates/reduxjs/files/public/index.html
+++ b/packages/create-monorepo-app/templates/reduxjs/files/public/index.html
@@ -8,5 +8,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="page"></div>
+
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+        const el = document.getElementById("page");
+        window.renderReactReduxJsApp(el);
+      });
+    </script>
   </body>
 </html>
